2003-09-15  John Levon  <levon@movementarian.org>

	* common_option.cpp: rename the array to
	avoid a link error in GCC 3.4

2003-09-15  John Levon  <levon@movementarian.org>

	* libop/Makefile.am:
	* libop/op_interface_25.h: move to ...

	* daemon/Makefile.am:
	* daemon/opd_interface.h: ... here

	* daemon/opd_image.c:
	* daemon/oprofiled.c: use above. Remove pointless
	command line options.

	* libop/op_config_25.h: remove.

	* libop/op_hw_config.h: move DCOOKIE_SHIFT to
	opd_interface.h

2003-09-15  John Levon  <levon@movementarian.org>

	* configure.in: use -Wdeclaration-after-statement
	if available

	* README:
	* daemon/opd_util.c:
	* daemon/opd_util.h:
	* doc/opannotate.1.in:
	* doc/opgprof.1.in:
	* doc/opreport.1.in:
	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* gui/oprof_start.cpp:
	* gui/oprof_start_util.cpp:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_get_interface.c:
	* libpp/locate_images.cpp: remove references to
	2.5, replaced with 2.6

2003-09-15  John Levon  <levon@movementarian.org>

	* doc/opreport.1.in: document --show-address

2003-09-15  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.cpp:
	* libpp/arrange_profiles.h:
	* pp/populate.cpp: more commentary

2003-09-14  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: handle 2.95 right io manipulator and the lack
	  of a proper setw(w) << std::string

2003-09-14  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: re-add header for image summary

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.cpp: throw an exception
	if there are two many unmerged profiles, with details
	of how to fix it

	* pp/opgprof_options.cpp:
	* pp/common_option.cpp: clean up error messages

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.h:
	* libpp/arrange_profiles.cpp: add location of 
	images when inverting profiles

	* libpp/locate_images.cpp: return empty string
	if file isn't readable
